fix shop issues on mobile

--- a/newDesign/css/shop.css
+++ b/newDesign/css/shop.css
@@ -10,6 +10,12 @@ body {
 .topSearch {
     padding: 30px 0;
 }
+.searchBar {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    max-width: 520px;
+}
 .searchBar input[type="text"] {
     height: 48px;
     width: calc(100% - 103px);
@@ -17,7 +23,6 @@ body {
     border: 1px solid #DDDEE2;
     border-radius: 4px;
     background-color: #FFFFFF;
-    float: left;
     margin-right: 10px;
     font-size: 16px;
     color: #858B98;
@@ -404,11 +409,17 @@ body {
         grid-template-columns: repeat(1, 1fr);
     }
 
+    .moreFilters { margin-top: 0; }
     .inStoreLabel { margin-top: 20px;}
     .onlineLabel {clear: both;margin-top: 20px;}
+    .category { margin-top: 20px; }
+    .city { margin-top: 20px; }
 }
 @media (max-width: 584px) {
     .searchBar input[type="submit"] {
         margin-top: -6px;
+    }
+    .col-4 {
+        width: 100%;
     }
 }
